# infocomm-toolbox

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Google_tests/: CMakeLists.txt  Modulator_Test.cpp  TCM_Test.cpp
channels/: awgnchannel.cpp  awgnchannel.hpp  channel.cpp  channel.hpp
modulators/: CMakeLists.txt  modulator.cpp  modulator.hpp
tcm/: CMakeLists.txt  tcm.cpp  tcm.hpp
